--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/harvesthq/chosen.git"
+    "url": "https://github.com/keyboardman/chosen.git"
   },
   "engines": {
     "node": ">=0.4.0"
@@ -67,7 +67,7 @@
       "url": "https://github.com/harvesthq/chosen/blob/master/LICENSE.md"
     },
     "links": {
-      "download": "https://github.com/harvesthq/chosen/releases",
+      "download": "https://github.com/keyboardman/chosen/releases",
       "docs": "https://harvesthq.github.io/chosen/"
     },
     "files": [
